Revert "fix header css alignment"
This reverts commit 4aae0ed127f362490a6a802e0e319fe43bfbba3e.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -46,7 +46,6 @@
     align-items: center;
     display: flex;
     flex-direction: row;
-    justify-self: flex-end;
 }
 
 .linkItem {
